--- a/index.html
+++ b/index.html
@@ -396,7 +396,6 @@
 <style>
   /* ─────────────── Payment Buttons ─────────────── */
 
-  /* Base button style */
   .payment-buttons a {
     display: inline-block;
     padding: 0.75em 1.2em;
@@ -407,24 +406,57 @@
     color: #fff;
     animation: pulse 1.8s infinite;
     transition: transform 0.2s ease-in-out;
+    font-size: 1em;
   }
 
-  /* Pulsating animation */
   @keyframes pulse {
     0%   { transform: scale(1); box-shadow: 0 0 0px rgba(255, 255, 255, 0.4); }
     50%  { transform: scale(1.05); box-shadow: 0 0 12px rgba(255, 255, 255, 0.6); }
     100% { transform: scale(1); box-shadow: 0 0 0px rgba(255, 255, 255, 0.4); }
   }
 
-  /* Fluorescent color upgrades */
   .btn-usa     { background-color: #ff0055; }  /* Fluorescent red-pink */
   .btn-india   { background-color: #ff9900; }  /* Bright saffron orange */
   .btn-nigeria { background-color: #00ff88; }  /* Neon green */
   .btn-pk      { background-color: #00cfff; }  /* Electric blue */
   .btn-sg      { background-color: #ff66cc; }  /* Fluorescent pink */
   .btn-th      { background-color: #cc00ff; }  /* Vivid violet */
+
+  @media (max-width: 600px) {
+    .payment-buttons a {
+      display: block;
+      width: 90%;
+      margin: 0.6em auto;
+      font-size: 1em;
+    }
+  }
 </style>
+
+<div class="payment-card">
+  <div class="payment-intro">🌐 Pay in your local currency</div>
+  <div class="payment-buttons">
+    <a href="https://buy.stripe.com/fZueVc0F30DG5dRdk333W37" class="btn-usa">
+      🇺🇸 Pay $20 USD
+    </a>
+    <a href="https://buy.stripe.com/6oUbJ0fzX3PSeOrgwf33W38" class="btn-india">
+      🇮🇳 Pay ₹650 Rupees
+    </a>
+    <a class="btn-nigeria" href="https://paystack.com/buy/ai-made-easy" target="_blank">
+      🇳🇬 Pay ₦11,000 Naira
+    </a>
+    <a href="https://buy.stripe.com/3cIfZgcnLcmo7lZeo733W3c" class="btn-pk">
+      🇵🇰 Pay PKR2,000
+    </a>
+    <a href="https://buy.stripe.com/00wfZgbjH5Y0gWzcfZ33W3a" class="btn-sg">
+      🇸🇬 Pay S$25 SGD
+    </a>
+    <a href="https://buy.stripe.com/3cIeVcevT0DG35Jfsb33W3b" class="btn-th">
+      🇹🇭 Pay ฿250 Thai Baht
+    </a>
+  </div>
+</div>
 <!-- END: Payment Buttons -->
+
 
 <!-- START: Affordably Priced Promo Block -->
 <section style="background-color: #FFF4F7; width: 100%; padding: 3em 1.5em; text-align: center;">
