--- a/index.html
+++ b/index.html
@@ -496,11 +496,97 @@
 </section>
 <!-- END: Affordably Priced Promo Block -->
  
-  <footer>
-    © 2025 STEMSphere Academy. All rights reserved.
-  </footer>
+<!-- START: FAQ Section -->
+<section class="faq-section">
+  <h2 class="faq-title">Frequently Asked Questions</h2>
+  <div class="faq-container">
+    <details>
+      <summary>Do I need a tech background to take this course?</summary>
+      <p>Not at all. AI Made Easy is designed for beginners—entrepreneurs, freelancers, and curious minds—with no prior experience required.</p>
+    </details>
+    <details>
+      <summary>What will I be able to do after completing the course?</summary>
+      <p>You’ll be able to use AI tools for productivity, automation, and content creation. Many students start applying what they learn within hours of finishing the course.</p>
+    </details>
+    <details>
+      <summary>How long does the course take?</summary>
+      <p>The core content takes about 1 hour to complete. It’s fast-paced, hands-on, and designed to deliver immediate value.</p>
+    </details>
+    <details>
+      <summary>Is this just theory or will I get practical experience?</summary>
+      <p>It’s highly practical. You’ll build real projects like talking avatars, AI-powered workflows, and even explore tools like ChatGPT and Notion AI.</p>
+    </details>
+    <details>
+      <summary>Can I use this knowledge in my business or freelance work?</summary>
+      <p>Absolutely. The course is built to help you apply AI in real-world scenarios—whether you're creating content, automating tasks, or improving client deliverables.</p>
+    </details>
+    <details>
+      <summary>What if I don’t get results?</summary>
+      <p>If you complete the course and don’t feel more confident using AI tools, we offer a full refund. Your success is our priority.</p>
+    </details>
+    <details>
+      <summary>Is this course suitable for students outside the U.S.?</summary>
+      <p>Yes! We’ve had thousands of students from Nigeria, India, Pakistan, Singapore, and beyond. The course is globally accessible and culturally inclusive.</p>
+    </details>
+  </div>
+</section>
 
-  <!-- YouTube & Sign-Up Button Script -->
+<!-- Styles -->
+<style>
+  .faq-section {
+    background: #111;
+    color: #fff;
+    padding: 3em 1.5em;
+    text-align: left;
+    max-width: 800px;
+    margin: 0 auto;
+  }
+
+  .faq-title {
+    font-size: 1.8em;
+    font-weight: 700;
+    margin-bottom: 1em;
+    text-align: center;
+    color: #FFD700;
+  }
+
+  .faq-container details {
+    background: #222;
+    border: 1px solid #333;
+    border-radius: 6px;
+    margin-bottom: 1em;
+    padding: 1em;
+    cursor: pointer;
+  }
+
+  .faq-container summary {
+    font-weight: 600;
+    font-size: 1.1em;
+    color: #00f8ff;
+  }
+
+  .faq-container p {
+    margin-top: 0.8em;
+    font-size: 0.95em;
+    line-height: 1.5;
+    color: #ccc;
+  }
+
+  @media (max-width: 600px) {
+    .faq-title {
+      font-size: 1.5em;
+    }
+    .faq-container summary {
+      font-size: 1em;
+    }
+    .faq-container p {
+      font-size: 0.9em;
+    }
+  }
+</style>
+<!-- END: FAQ Section -->
+
+    <!-- YouTube & Sign-Up Button Script -->
   <script>
     let player, checkInterval;
     const milestones = { signUp: 201 };
@@ -690,3 +776,12 @@
 </style>
 <!-- END: Mobile Optimization Script -->
 
+<!-- START: Footer -->
+<footer style="background: #000; color: #bbb; padding: 2em 1em; text-align: center; font-size: 0.85em;">
+  <p>© 2025 STEMSphere Academy. All rights reserved.</p>
+  <p>
+    <a href="#faq" style="color: #00bfff; text-decoration: underline; margin-right: 1em;">FAQs</a>
+    <a href="#privacy-policy" style="color: #00bfff; text-decoration: underline;">Privacy Policy</a>
+  </p>
+  <p>Need help? Contact us at <a href="mailto:support@stemsphere.academy" style="color: #FFD700;">support@stemsphere.academy</a></p>
+</footer>
