--- a/index.html
+++ b/index.html
@@ -392,6 +392,30 @@
 </section>
 <!-- END: AI Made Easy Syllabus Block -->
 
+<!-- START: Affordably Priced Promo Block -->
+<section style="background-color: #FFF4F7; width: 100%; padding: 3em 1.5em; text-align: center;">
+  <div style="max-width: 750px; margin: 0 auto;">
+    <h2 style="font-weight: bold; font-size: 1.5em; color: #000; margin-bottom: 1em;">
+      Start Smart. Start 
+      <span style="background: linear-gradient(120deg, #b30000, #ff4d4d); -webkit-background-clip: text; color: transparent; font-weight: bold;">
+        Affordably
+      </span>. Grow Confident.
+    </h2>
+
+    <p style="font-size: 1em; color: #000; margin-bottom: 2em;">
+      Our 
+      <span style="background: linear-gradient(120deg, #b30000, #ff4d4d); -webkit-background-clip: text; color: transparent; font-weight: bold;">
+        affordably priced
+      </span> AI Made Easy course helps students get their feet wet before diving into more advanced subjects like Python Programming, SAT Math, Chemistry, Public Speaking, Biology, and more.
+    </p>
+
+    <p style="font-size: 1em; color: #000;">
+      We’re confident that once you experience the clarity, creativity, and hands-on learning in this course, you’ll come to us for the rest of your e-learning journey.
+    </p>
+  </div>
+</section>
+<!-- END: Affordably Priced Promo Block -->
+    
 <!-- START: Countdown Timer -->
 <script>
   function startCountdown(duration, display) {
@@ -421,7 +445,6 @@
 
 <!-- START: Payment Buttons -->
 <style>
-  /* ─────────────── Payment Buttons ─────────────── */
   .payment-buttons {
     display: flex;
     flex-direction: column;
@@ -443,10 +466,17 @@
     box-sizing: border-box;
     font-size: 1em;
     transition: transform 0.15s ease;
+    animation: pulse 2.8s ease-in-out infinite;
   }
 
   .payment-buttons a:hover {
     transform: translateY(-2px);
+  }
+
+  @keyframes pulse {
+    0%   { transform: scale(1); box-shadow: 0 0 0px rgba(255, 255, 255, 0.2); }
+    50%  { transform: scale(1.02); box-shadow: 0 0 8px rgba(255, 255, 255, 0.3); }
+    100% { transform: scale(1); box-shadow: 0 0 0px rgba(255, 255, 255, 0.2); }
   }
 
   .btn-usa     { background-color: #1E3A8A; }
@@ -475,8 +505,11 @@
 </style>
 
 <div class="payment-card">
-  <div class="payment-intro" style="text-align: center; font-weight: bold; font-size: 1.2em; margin-bottom: 1em;">
-    🚨 Limited-Time Offer — <span id="countdown-timer" style="color: #ff4d4d;">Loading...</span> left to claim your discount!
+  <div class="payment-intro" style="text-align: center; font-weight: bold; font-size: 1.2em; margin-bottom: 0.6em;">
+    🌐 Pay in your local currency
+  </div>
+  <div style="text-align: center; font-size: 1em; margin-bottom: 1em;">
+    ⏳ This special price won’t last forever — <span id="countdown-timer" style="color: #ff4d4d;">Loading...</span> remaining.
   </div>
   <div class="payment-buttons">
     <a href="https://buy.stripe.com/fZueVc0F30DG5dRdk333W37" class="btn-usa">
@@ -500,30 +533,6 @@
   </div>
 </div>
 <!-- END: Payment Buttons -->
-
-<!-- START: Affordably Priced Promo Block -->
-<section style="background-color: #FFF4F7; width: 100%; padding: 3em 1.5em; text-align: center;">
-  <div style="max-width: 750px; margin: 0 auto;">
-    <h2 style="font-weight: bold; font-size: 1.5em; color: #000; margin-bottom: 1em;">
-      Start Smart. Start 
-      <span style="background: linear-gradient(120deg, #b30000, #ff4d4d); -webkit-background-clip: text; color: transparent; font-weight: bold;">
-        Affordably
-      </span>. Grow Confident.
-    </h2>
-
-    <p style="font-size: 1em; color: #000; margin-bottom: 2em;">
-      Our 
-      <span style="background: linear-gradient(120deg, #b30000, #ff4d4d); -webkit-background-clip: text; color: transparent; font-weight: bold;">
-        affordably priced
-      </span> AI Made Easy course helps students get their feet wet before diving into more advanced subjects like Python Programming, SAT Math, Chemistry, Public Speaking, Biology, and more.
-    </p>
-
-    <p style="font-size: 1em; color: #000;">
-      We’re confident that once you experience the clarity, creativity, and hands-on learning in this course, you’ll come to us for the rest of your e-learning journey.
-    </p>
-  </div>
-</section>
-<!-- END: Affordably Priced Promo Block -->
  
 <!-- START: FAQ Section -->
 <section class="faq-section">
