--- a/index.html
+++ b/index.html
@@ -392,31 +392,7 @@
 </section>
 <!-- END: AI Made Easy Syllabus Block -->
 
-<!-- START: Affordably Priced Promo Block -->
-<section style="background-color: #FFF4F7; width: 100%; padding: 3em 1.5em; text-align: center;">
-  <div style="max-width: 750px; margin: 0 auto;">
-    <h2 style="font-weight: bold; font-size: 1.5em; color: #000; margin-bottom: 1em;">
-      Start Smart. Start 
-      <span style="background: linear-gradient(120deg, #b30000, #ff4d4d); -webkit-background-clip: text; color: transparent; font-weight: bold;">
-        Affordably
-      </span>. Grow Confident.
-    </h2>
-
-    <p style="font-size: 1em; color: #000; margin-bottom: 2em;">
-      Our 
-      <span style="background: linear-gradient(120deg, #b30000, #ff4d4d); -webkit-background-clip: text; color: transparent; font-weight: bold;">
-        affordably priced
-      </span> AI Made Easy course helps students get their feet wet before diving into more advanced subjects like Python Programming, SAT Math, Chemistry, Public Speaking, Biology, and more.
-    </p>
-
-    <p style="font-size: 1em; color: #000;">
-      We’re confident that once you experience the clarity, creativity, and hands-on learning in this course, you’ll come to us for the rest of your e-learning journey.
-    </p>
-  </div>
-</section>
-<!-- END: Affordably Priced Promo Block -->
-    
-<!-- START: Countdown Timer -->
+    <!-- START: Countdown Timer -->
 <script>
   function startCountdown(duration, display) {
     let timer = duration, hours, minutes, seconds;
@@ -505,11 +481,11 @@
 </style>
 
 <div class="payment-card">
-  <div class="payment-intro" style="text-align: center; font-weight: bold; font-size: 1.2em; margin-bottom: 0.6em;">
-    🌐 Pay in your local currency
+  <div style="text-align: center; font-weight: bold; font-size: 1.2em; margin-bottom: 0.6em;">
+    🚨 Limited-Time Offer — <span id="countdown-timer" style="color: #ff4d4d;">Loading...</span> remaining
   </div>
-  <div style="text-align: center; font-size: 1em; margin-bottom: 1em;">
-    ⏳ This special price won’t last forever — <span id="countdown-timer" style="color: #ff4d4d;">Loading...</span> remaining.
+  <div class="payment-intro" style="text-align: center; font-size: 1em; margin-bottom: 1em;">
+    🌐 Pay in your local currency
   </div>
   <div class="payment-buttons">
     <a href="https://buy.stripe.com/fZueVc0F30DG5dRdk333W37" class="btn-usa">
@@ -533,6 +509,30 @@
   </div>
 </div>
 <!-- END: Payment Buttons -->
+
+<!-- START: Affordably Priced Promo Block -->
+<section style="background-color: #FFF4F7; width: 100%; padding: 3em 1.5em; text-align: center;">
+  <div style="max-width: 750px; margin: 0 auto;">
+    <h2 style="font-weight: bold; font-size: 1.5em; color: #000; margin-bottom: 1em;">
+      Start Smart. Start 
+      <span style="background: linear-gradient(120deg, #b30000, #ff4d4d); -webkit-background-clip: text; color: transparent; font-weight: bold;">
+        Affordably
+      </span>. Grow Confident.
+    </h2>
+
+    <p style="font-size: 1em; color: #000; margin-bottom: 2em;">
+      Our 
+      <span style="background: linear-gradient(120deg, #b30000, #ff4d4d); -webkit-background-clip: text; color: transparent; font-weight: bold;">
+        affordably priced
+      </span> AI Made Easy course helps students get their feet wet before diving into more advanced subjects like Python Programming, SAT Math, Chemistry, Public Speaking, Biology, and more.
+    </p>
+
+    <p style="font-size: 1em; color: #000;">
+      We’re confident that once you experience the clarity, creativity, and hands-on learning in this course, you’ll come to us for the rest of your e-learning journey.
+    </p>
+  </div>
+</section>
+<!-- END: Affordably Priced Promo Block -->
  
 <!-- START: FAQ Section -->
 <section class="faq-section">
