--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         <div class="video-wrapper">
           <div class="placeholder-frame" id="placeholder">
             <img
-              src="https://img.youtube.com/vi/3gGz-jLkYoI/maxresdefault.jpg"
+              src="https://img.youtube.com/vi/H_Pvbovsiyw/maxresdefault.jpg"
               alt="AI Made Simple course thumbnail"
             />
           </div>
@@ -652,7 +652,7 @@
     function onYouTubeIframeAPIReady() {
       player = new YT.Player('player', {
         host: 'https://www.youtube.com',
-        videoId: '3gGz-jLkYoI',
+        videoId: 'H_Pvbovsiyw',
         playerVars: {
           controls: 0, disablekb: 1, fs: 0,
           modestbranding: 1, rel: 0, iv_load_policy: 3,
